cmake_minimum_required(VERSION 3.23)
project(ICS4UCBOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(ICS4UCBOJ "Unit 1 and 2 (Basics and Recursion)/main.cpp")

add_executable(test "Unit 1 and 2 (Basics and Recursion)/test.cpp")
add_executable(105 "Unit 1 and 2 (Basics and Recursion)/105.cpp")
add_executable(106a "Unit 1 and 2 (Basics and Recursion)/106a.cpp")
add_executable(spiral "Unit 1 and 2 (Basics and Recursion)/spiral.cpp")
add_executable(magicSquare "Unit 1 and 2 (Basics and Recursion)/magicSquare.cpp")
add_executable(spiralsDMOJ "Unit 1 and 2 (Basics and Recursion)/spiralsDMOJ.cpp")
add_executable(recursiveFunctions1 "Unit 1 and 2 (Basics and Recursion)/recursiveFunctions1.cpp")
add_executable(recursiveFunctions2 "Unit 1 and 2 (Basics and Recursion)/recursiveFunctions2.cpp")
add_executable(recursiveFunctions3 "Unit 1 and 2 (Basics and Recursion)/recursiveFunctions3.cpp")
add_executable(recursiveFunctions4 "Unit 1 and 2 (Basics and Recursion)/recursiveFunctions4.cpp")
add_executable(recursiveFunctions5 "Unit 1 and 2 (Basics and Recursion)/recursiveFunctions5.cpp")
add_executable(recursiveFunctions6 "Unit 1 and 2 (Basics and Recursion)/recursiveFunctions6.cpp")
add_executable(104 "Unit 1 and 2 (Basics and Recursion)/104.cpp")
add_executable(103 "Unit 1 and 2 (Basics and Recursion)/103.cpp")
add_executable(recursivePractices "Unit 1 and 2 (Basics and Recursion)/recursivePractices.cpp")
add_executable(linearBinarySearch "Unit 3 (Search and Sort)/linearBinarySearch.cpp")
add_executable(108RecursiveFunctionAssignment "Unit 1 and 2 (Basics and Recursion)/108RecursiveFunctionAssignment.cpp")
add_executable(InsertionSort "Unit 3 (Search and Sort)/InsertionSort.cpp")
add_executable(SelectionSort "Unit 3 (Search and Sort)/SelectionSort.cpp")
add_executable(BubbleSort "Unit 3 (Search and Sort)/BubbleSort.cpp")
add_executable(ShellSort "Unit 3 (Search and Sort)/ShellSort.cpp")
add_executable(QuickSort "Unit 3 (Search and Sort)/QuickSort.cpp")
add_executable(MergeSort "Unit 3 (Search and Sort)/MergeSort.cpp")
add_executable(testingSorts "Unit 3 (Search and Sort)/testingSorts.cpp")
add_executable(oop1 "Unit 4 (Object Oriented Programming)/oop1.cpp")
add_executable(testClasses "Unit 4 (Object Oriented Programming)/testClasses.cpp")